--- a/ch09/9-5/ch09-branch.yml
+++ b/ch09/9-5/ch09-branch.yml
@@ -12,7 +12,7 @@ items:
       type: ImageChange
     source:
       git:
-        uri: https://github.com/43books/ch09-apps.git
+        uri: https://github.com/sspysong/ch09-apps.git
         ref: dev 
       type: Git
     strategy:
