--- a/ch09/9-6/ch09-emp.yml
+++ b/ch09/9-6/ch09-emp.yml
@@ -16,7 +16,7 @@ items:
       type: ImageChange
     source:
       git:
-        uri: https://github.com/43books/ch09-emp.git
+        uri: https://github.com/sspysong/ch09-apps.git
         ref: master
       type: Git
     strategy:
